refactor: fix wet branch logic and extract sizing module
Board Texture:
- Fix wet branch to properly trigger on two-tone + high connectivity
- Improve straight draw detection with unique ranks and span threshold
- Reorder classification: monotone → paired → wet → connected → semi_wet → dry
- Add wet test case (QhJh9d)

Sizing Module:
- Extract sizing functions to new sizing.ts module
- roundToHalf(), clamp(), getOpenRaiseSize(), getThreeBetSize(), getFourBetSize()
- Add comprehensive sizing tests
- Reduce aiDecisionEngine.ts by 46 lines

Tests:
- npm run test:board-texture (7 cases)
- npm run test:sizing (open/3bet/4bet sizing)

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "eslint",
     "test:board-texture": "node scripts/boardTexture.test.cjs",
+    "test:sizing": "node scripts/sizing.test.cjs",
     "test:e2e": "playwright test --config=e2e/playwright.config.ts",
     "test:e2e:ui": "playwright test --config=e2e/playwright.config.ts --ui"
   },
