--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,10 @@
     "test:board-texture": "node scripts/boardTexture.test.cjs",
     "test:sizing": "node scripts/sizing.test.cjs",
     "test:e2e": "playwright test --config=e2e/playwright.config.ts",
-    "test:e2e:ui": "playwright test --config=e2e/playwright.config.ts --ui"
+    "test:e2e:ui": "playwright test --config=e2e/playwright.config.ts --ui",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@next/third-parties": "^16.1.6",
@@ -41,14 +44,20 @@
   "devDependencies": {
     "@playwright/test": "^1.58.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.1.3",
     "critters": "^0.0.23",
     "eslint": "^9",
     "eslint-config-next": "16.1.5",
+    "jsdom": "^28.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.18"
   }
 }
