chore: 專案清理 — .gitignore、README、CI、Python 模組整合、API 修正
- .gitignore: 補齊 Node.js/Next.js/Playwright 產物
- README.md: 更新為 monorepo 架構說明
- apps/web/README.md: 替換預設模板為專案文件
- CI: 加 build step、E2E 改用 production URL
- 刪除根目錄重複 Python 模組 (core/trainer/analyzer/tests)
  搬移 test_hand + test_evaluator 到 apps/api/tests/
  修正 scripts/ import path 指向 apps/api
- API: 統一版本號 v2.1.0、移除無效 CORS wildcard literal
- 刪除舊 sentry.client.config.ts (已由 instrumentation-client.ts 取代)

--- a/.gitignore
+++ b/.gitignore
@@ -9,18 +9,36 @@ env/
 .venv/
 ENV/
 
+# Node.js
+node_modules/
+.npm
+.pnpm-store/
+
+# Next.js
+.next/
+out/
+.vercel
+
+# Build
+dist/
+build/
+*.tsbuildinfo
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+test-results/
+playwright-report/
+blob-report/
+
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
 
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-
-# Streamlit
+# Streamlit (legacy)
 .streamlit/secrets.toml
 
 # User data (keep structure, ignore content)
@@ -34,3 +52,8 @@ Thumbs.db
 # Environment
 .env
 .env.local
+.env.production.local
+.env.development.local
+
+# Sentry
+.sentryclirc
