fix(ci): 用 --webpack 取代 Turbopack 解決 @data alias 問題
Turbopack 不允許 import project root 外部的檔案（../../data），
但 webpack 的 resolve.alias 沒有此限制。CI 改用 --webpack build。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
         run: npm run test:run
 
       - name: Build
-        run: npm run build
+        run: npx next build --webpack
         env:
           NEXT_PUBLIC_API_URL: https://api.grindgto.com
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
