--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -7,6 +7,9 @@ python-multipart>=0.0.6
 # Core dependencies
 python-dotenv>=1.0.0
 
+# HTTP client (used by analyzer/ai_client.py)
+httpx>=0.27.0
+
 # Error Monitoring
 sentry-sdk[fastapi]>=1.39.0
 
