fix: MEDIUM priority bug fixes (#5-#9)
#8 Backend quality:
- Replace 5 bare except: with except Exception: (mtt.py, analyze.py)
- Add X-API-Key auth to DELETE /solver/cache endpoint
- Add input validation to evaluate.py scenario_key parsing (422 vs 500)

#5 i18n:
- Add 5 missing i18n keys (common.retry, exam.improvementAreas/mistakes/recommendedReading/recommendedReadingDesc)
- Add postflop.sizingPrompt/oopDefensePrompt keys, replace hardcoded Chinese in postflop page

#6 CI/CD:
- Remove --webpack flag from CI build (match Vercel default)
- Add comment noting E2E tests run against production

#7 Duplicated data:
- Remove unused apps/web/content/guides/ (frontend reads from root)
- Sync MTT data v1.1 from API to root (defense_vs_shove, hu_push_defense)

#9 Blog:
- Replace dead placeholder blog page with redirect to /learn

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,8 +96,10 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
 
-      - name: E2E tests (production)
+      - name: E2E tests (post-deploy smoke)
         run: npx playwright test --config=e2e/playwright.config.ts
         env:
+          # NOTE: Tests run against production as a post-deploy smoke test.
+          # Consider adding a staging URL for pre-merge validation.
           E2E_BASE_URL: https://grindgto.com
           E2E_EXTERNAL_SERVER: "1"
